--- a/layouts/order_management_system/list.html
+++ b/layouts/order_management_system/list.html
@@ -177,14 +177,14 @@
     >
       <img
         src="/images/imac-binance.png"
-        class="w-full h-auto max-h-[400px] object-contain"
+        class="w-full h-auto max-h-[400px] max-sm:h-[200px] object-contain"
         alt="Binance on iMac"
       />
     </div>
 
     <!-- TEXT on Left -->
     <div
-      class="w-auto md:w-3/4 max-sm:w-11/12 mx-auto order-2 max-sm:order-1"
+      class="w-auto md:w-3/4 max-sm:w-11/12 max-sm:pb-10 mx-auto order-2 max-sm:order-1"
       x-data="{
       shown: true,
       open: null,
@@ -402,7 +402,7 @@
     >
       <img
         src="/images/imac-binance.png"
-        class="w-full max-w-md h-auto object-contain"
+        class="w-full max-w-md h-auto object-contain max-sm:h-[200px]"
         alt="Functional Overview Graphic"
       />
     </div>
@@ -419,7 +419,7 @@
     >
       <img
         src="/images/imac-binance.png"
-        class="w-full max-w-md h-auto object-contain"
+        class="w-full max-w-md h-auto object-contain max-sm:h-[200px]"
         alt="System Diagram"
       />
     </div>
