--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -326,7 +326,7 @@
 
       <!-- Dynamic Items List (Column 1) -->
       <div
-        class="py-10 px-20 col-span-2"
+        class="py-10 px-20 max-sm:px-0 col-span-2"
         x-data="{
         items: [
           'A high-frequency message bus providing a fast and reliable information highway',
