--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -326,7 +326,7 @@
 
       <!-- Dynamic Items List (Column 1) -->
       <div
-        class="py-10 px-20 max-sm:px-0 col-span-2"
+        class="py-10 px-20 max-sm:px-0 col-span-2 text-xl"
         x-data="{
         items: [
           'A high-frequency message bus providing a fast and reliable information highway',
@@ -361,7 +361,7 @@
              Item Text -->
             <span
               x-text="item"
-              class="ml-4 group-hover:text-gray-400 transition duration-300"
+              class="ml-4 group-hover:text-gray-400 transition duration-300 pb-5"
             ></span>
           </div>
         </template>
