--- a/layouts/order_management_system/list.html
+++ b/layouts/order_management_system/list.html
@@ -169,15 +169,20 @@
   <!-- Introduction Section -->
   <div
     class="w-full max-h-max grid grid-cols-2 max-sm:grid-cols-1 bg-[#090619] text-white text-left py-20 max-sm:py-10"
+    x-data="{ shown: false }"
     x-intersect:enter="shown = true"
   >
     <!-- IMAGE on Right -->
     <div
       class="image-feature flex justify-center items-center absolute sm:static max-sm:relative -left-28 sm:left-0 max-sm:left-auto w-auto order-1 max-sm:order-2"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-1000 delay-50"
+      x-transition:enter-start="opacity-0 -translate-x-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
     >
       <img
         src="/images/imac-binance.png"
-        class="w-full h-auto max-h-[400px] max-sm:h-[200px] object-contain"
+        class="w-full h-auto max-h-[800px] max-sm:h-[200px] object-contain"
         alt="Binance on iMac"
       />
     </div>
@@ -284,6 +289,7 @@
   <!-- Functional Overview Section -->
   <div
     class="w-full max-h-max grid grid-cols-2 max-sm:grid-cols-1 bg-white text-black text-left py-20 max-sm:py-10"
+    x-data="{ shown: false }"
     x-intersect:enter="shown = true"
   >
     <!-- TEXT on Left (Desktop) / Top (Mobile) -->
@@ -398,11 +404,15 @@
 
     <!-- IMAGE on Right (Desktop) / Bottom (Mobile) -->
     <div
-      class="image-feature flex justify-center items-center sm:static w-full order-2 max-sm:order-2 mt-10 sm:mt-0"
+      class="flex justify-center items-center sm:static w-full order-2 max-sm:order-2 mt-10 sm:mt-0"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-1000 delay-50"
+      x-transition:enter-start="opacity-0 translate-x-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
     >
       <img
-        src="/images/imac-binance.png"
-        class="w-full max-w-md h-auto object-contain max-sm:h-[200px]"
+        src="/images/imac-binance-2.png"
+        class="w-full h-[800px] object-contain max-sm:h-[200px]"
         alt="Functional Overview Graphic"
       />
     </div>
@@ -411,15 +421,20 @@
   <!-- Introduction Section 3 - Non-Functional Aspects -->
   <div
     class="w-full max-h-max grid grid-cols-2 max-sm:grid-cols-1 bg-[#090619] text-white text-left py-20 max-sm:py-10"
+    x-data="{ shown : false }"
     x-intersect:enter="shown = true"
   >
     <!-- IMAGE on Left (Desktop) / Bottom (Mobile) -->
     <div
       class="image-feature flex justify-center items-center w-full order-1 max-sm:order-2 mt-10 sm:mt-0"
+      x-show="shown"
+      x-transition:enter="transition ease-out duration-1000 delay-50"
+      x-transition:enter-start="opacity-0 translate-y-12"
+      x-transition:enter-end="opacity-100 translate-y-0"
     >
       <img
-        src="/images/imac-binance.png"
-        class="w-full max-w-md h-auto object-contain max-sm:h-[200px]"
+        src="/images/imac-binance-3.png"
+        class="w-full h-[400px] object-contain max-sm:h-[200px]"
         alt="System Diagram"
       />
     </div>
