--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -27,7 +27,7 @@
         class="invisible lg:absolute lg:hidden max-sm:visible flex justify-center"
       >
         <img
-          src="/images/laptop-trading.png"
+          src="/images/imac-binance.png"
           alt="hero-image"
           class="w-full max-sm:w-5/6 mt-10 z-10"
         />
@@ -326,7 +326,7 @@
 
       <!-- Dynamic Items List (Column 1) -->
       <div
-        class="py-10 px-20 max-sm:px-0 col-span-2 text-xl"
+        class="py-10 px-20 max-sm:px-0 col-span-2 text-xl max-sm:text-sm"
         x-data="{
         items: [
           'A high-frequency message bus providing a fast and reliable information highway',
@@ -361,7 +361,7 @@
              Item Text -->
             <span
               x-text="item"
-              class="ml-4 group-hover:text-gray-400 transition duration-300 pb-5"
+              class="ml-4 group-hover:text-gray-400 transition duration-300 pb-5 max-sm:pb-2"
             ></span>
           </div>
         </template>
