--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,13 @@
 <footer class="w-full bg-white pb-10">
-  <div class="">
+  <div>
     <div class="grid grid-cols-4 max-sm:grid-cols-1">
+      <!-- CTA Section -->
       <div
-        class="flex flex-col p-14 col-span-3 max-sm:p-6 pl-20 max-sm:pl-10 gap-10 max-sm:gap-6"
+        class="flex flex-col p-14 col-span-3 max-sm:p-6 max-sm:pl-10 gap-10 max-sm:gap-6"
       >
-        <div class="text-[4rem] max-sm:text-[2rem] font-bold">
+        <h2 class="text-[4rem] max-sm:text-[2rem] font-bold leading-tight">
           Want to Start <br />a Project?
-        </div>
+        </h2>
         <a href="/contactus">
           <button
             class="w-28 h-10 bg-black text-white font-bold text-center justify-center items-center"
@@ -15,7 +16,9 @@
           </button>
         </a>
       </div>
-      <div class="flex flex-col">
+
+      <!-- Navigation Links -->
+      <nav class="flex flex-col">
         <ul
           class="flex flex-col gap-4 pl-10 max-sm:pr-10 pt-20 max-sm:pt-2 max-sm:pb-6 max-sm:grid max-sm:grid-cols-2 text-sm"
         >
@@ -24,42 +27,65 @@
           <li><a href="/contactus">CONTACT US</a></li>
           <li><a href="/blog">BLOG</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
+
+    <!-- Policy Links and Social Icons -->
     <div class="grid grid-cols-4 max-sm:flex max-sm:flex-wrap">
       <div class="col-span-3">
         <ul
           class="flex max-sm:flex-col items-start gap-20 max-sm:gap-4 text-sm max-sm:text-xs font-thin ml-20 max-sm:ml-10"
         >
-          <li class="hover:text-green-600">
+          <li>
             <a
               href="https://algoteq.com/wp-content/uploads/2025/01/Products-Services.pdf"
               target="_blank"
+              rel="noopener"
+              class="hover:text-green-600"
               >Products & Services</a
             >
           </li>
-          <li class="hover:text-green-600">
-            <a href="/social-policy">Corporate Social Responsibility Policy</a>
+          <li>
+            <a href="/social-policy" class="hover:text-green-600">
+              Corporate Social Responsibility Policy
+            </a>
           </li>
-          <li class="hover:text-green-600">
+          <li>
             <a
               href="https://algoteq.com/wp-content/uploads/2024/03/Algoteq-Environmental-Impact-Policy.pdf"
               target="_blank"
+              rel="noopener"
+              class="hover:text-green-600"
               >Environmental Impact Policy</a
             >
           </li>
         </ul>
       </div>
+
+      <!-- Social Icons -->
       <div class="col-span-1 flex gap-5 ml-10 max-sm:mt-10">
-        <a href="https://x.com/algoteq" target="_blank"
-          ><img src="/images/x-social.svg" alt="x-social" class="h-10"
-        /></a>
-        <a href="https://www.linkedin.com/company/algoteq/" target="_blank"
-          ><img
+        <a href="https://x.com/algoteq" target="_blank" rel="noopener">
+          <img
+            src="/images/x-social.svg"
+            alt="X (Twitter) icon"
+            width="40"
+            height="40"
+            class="w-10 h-10"
+          />
+        </a>
+        <a
+          href="https://www.linkedin.com/company/algoteq/"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
             src="/images/linkedin-social.svg"
-            alt="linkedin-social"
-            class="h-10"
-        /></a>
+            alt="LinkedIn icon"
+            width="40"
+            height="40"
+            class="w-10 h-10"
+          />
+        </a>
       </div>
     </div>
   </div>
