--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -82,7 +82,7 @@
           href="{{ .URL }}"
           class="px-4 py-2 text-sm rounded border
             {{ if eq .PageNumber $.Paginator.PageNumber }}
-              bg-indigo-500 text-white border-indigo-500
+              bg-green-500 text-white border-green-500
             {{ else }}
               bg-gray-800 text-white border-gray-700 hover:bg-gray-700
             {{ end }}"
